	  descriptor, for any reason, set the POLLERR bit (2015-08-13).
	* libc/stdlib: Add support for div() to the C library.  From
	  OrbitalFox (2015-08-14).
	* libc/stdlib:  Might as well add ldiv() and lldiv() to since
	  these are equivalent to div() with long and long long types,
	  respectively, instead of int (2015-08-14).
	* include/signal.h and files that include it:  Add si_errno to
	  siginfo_t (2015-08-14).
	* drivers/sensors/mx58xx.c and include/nuttx/sensors/ms58xx.h:
	  General the MS5805 altimeter driver to support other family
	  members and rename to ms58xx. From Paul Alexander Patience
	  (2015-08-14).
	* Network drivers. Fix bug in tun interface driver.  From Max
	  Neklyudov (2015-08-17).
	* STM32:  Added definitions for STM32F303K6, STM32F303K8, STM32F303C6,
	  STM32F303C8, STM32F303RD, and STM32F303RE devices.  From Paul
	  Alexander Patience (2015-08-17).
	* include/nuttx/can.h and all CAN drivers: Add an error indication
	  bit to the CAN message report.  This indication must then be cleared
	  in all existing drivers.  More to come (2015-08-18).
	* arch/arm/src/lpc17/lpc17_irq.c: Set NVIC vector address so that
	  code can execute with a bootloader or can execute from RAM.  From
	  Pavel Pisa (2015-08-20).
	* All ARMV7-M IRQ setup:  Always set the NVIC vector table address
	  unconditionally.  This is needed in cases where the code is running
	  with a bootload and when the code is running from RAM.  It is also
	  needed by the logic of up_ramvec_initialize() which gets the vector
	  base address from the NVIC.  Suggested by Pavel Pisa (2015-08-21).
	* SAMV7 USBHS DCD: The device controller driver is (finally) functional
	  (2015-08-21).
	* recvfrom(): Correct wait for new data when NET_UDP_READAHEAD is
	  enabled.  Fix size accounting when recvfrom_udpreadahead() sets
	  state.rf_recvlen == -1.  I have not checked if data are accumulated
	  to the right position in the buffer however. From Pavel Pisa
	  (2015-08-15).